--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
     "prettier": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
@@ -25,6 +26,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "parcel": "^1.12.4"
   }
 }
