--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@frontendmasters/pet": "^1.0.3",
+    "@reach/router": "^1.3.4",
     "prettier": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
@@ -34,5 +35,4 @@
   "browserslist": [
     "last 2 Chrome versions"
   ]
-  
-}  
+}
