--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,12 +9,12 @@
     ],
     "rules": {
         "react/prop-types": 0,
-        "no-console": "warn",
-        "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn"
+        "no-console": 1,
+        "react-hooks/rules-of-hooks": 2,
+        "react-hooks/exhaustive-deps": 1
     },
-
-    "plugins": ["react", "import", "jsx-a11y"],
+    "parser": "babel-eslint",
+    "plugins": ["react", "import", "jsx-a11y", "react-hooks"],
     "parserOptions": {
         "ecmaVersion": 2018,
         "sourceType": "module",
